----------------------------------------------------------------------
 OmegaT 3.5.3
----------------------------------------------------------------------
  11 Enhancements
   3 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
3.5.3 vs 3.5.2 update 1

  Implemented requests:  

  - Add sentence case to Shift+F3 case change 
  https://sourceforge.net/p/omegat/feature-requests/1134/

  - Improve glossary matching of terms containing numbers
  https://sourceforge.net/p/omegat/feature-requests/1138/

  - Allow suppressing MT retrieval for translated segments
  https://sourceforge.net/p/omegat/feature-requests/1137/

  - Ctrl-M manual call of MT on translated segments
  https://sourceforge.net/p/omegat/feature-requests/1140/

  - Machine translate only current segment, on demand
  https://sourceforge.net/p/omegat/feature-requests/552/

  - Make URLs in Comments, Notes, Glossary panes clickable
  https://sourceforge.net/p/omegat/feature-requests/1141/

  - Back up preferences when a loading error occurs
  https://sourceforge.net/p/omegat/feature-requests/1142/

  Other changes:

  - Mac OS X: It is now possible to make the project files list 
"truly" full-screen. On OS X 10.11 this means you can have the main 
window and the project files window open side-by-side in split view.

  - spellcheck.groovy has a new option to ignore segments where 
source=target

  - A new script, Strip Bidi Marks (strip_bidi_marks.groovy) allows
removing bidi marks in the current segment 

  Bug fixes:

  - Spell Checking issue with a Turkish character 
  https://sourceforge.net/p/omegat/bugs/771/

  - Unresolvable scripting folder setting can cause an empty
Scripting window
  https://sourceforge.net/p/omegat/bugs/775/

  - Tag validation could wrongly mention bad nesting for custom tags.
Tag nesting is now only tested for OmegaT tags.

  Localisation Updates:

 - German localisation updated to 3.5.2 (UI)
